[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sims"
version = "0.1.0"
description = "Satellite Irrigation Management Support (SIMS) ET fraction algorithm"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "David Ketchum", email = "dgketchum@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = ["evapotranspiration", "remote-sensing", "landsat", "irrigation", "agriculture"]

dependencies = [
    "numpy>=1.20",
    "xarray>=2022.0",
    "rioxarray>=0.14",
    "geopandas>=0.12",
    "pandas>=1.5",
    "shapely>=2.0",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "stackstac>=0.4",
    "rasterio>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/dgketchum/sims"
Repository = "https://github.com/dgketchum/sims"

[tool.setuptools.packages.find]
include = ["sims*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
